--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-@import url("http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700");
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap');
-
 .material-icons {
     font-family: 'Material Icons';
     font-weight: normal;
@@ -35,7 +32,11 @@ a:hover {
 img {
     width: 100%;
 }
-video{
+body{
+    font-family: 'Noto Sans KR', 'sans-serif';
+    letter-spacing: -0.25px;
+}
+video {
     width: 100%;
     height: auto;
     object-fit: fill;
@@ -50,12 +51,27 @@ button {
     overflow: visible;
     cursor: pointer
 }
-
+.blur{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    opacity: 0;
+    visibility: hidden;
+    top: 0;
+    z-index:1;
+    backdrop-filter: blur(3px);
+    transition: 0.5s;
+}
+.blur.on{
+    opacity: 1;
+    visibility: visible;
+    transition: 0.5s;
+}
 /* header 시작 */
 header {
     width: 100%;
-    height: 60px;
-    background-color: #353535;
+    background-color: #222;
     font-size: 12px;
     position: fixed;
     z-index: 1;
@@ -65,22 +81,6 @@ header a {
     color: #D9D9D9;
 }
 
-.header_bg {
-    width: 100%;
-    height: 380px;
-    background-color: #2c2c2c;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    z-index: -1;
-    opacity: 0;
-    transition: 0.5s;
-    visibility: hidden;
-}
-.header_bg.active{
-    opacity: 0.9;
-    visibility: visible;
-}
 .header_inner {
     max-width: 1320px;
     padding: 0 20px;
@@ -93,7 +93,12 @@ header a {
 }
 
 .logo {
-    width: 28px;
+    z-index: 10;
+    width: 100px;
+}
+
+.info {
+    z-index: 10;
 }
 
 .login {
@@ -125,18 +130,21 @@ nav .gnb {
     justify-content: center;
 }
 
-nav .gnb > li {
+nav .gnb>li {
     padding: 0 10px;
     line-height: 60px;
-    width: 60px;
-    text-align: center;;
-    font-family: "Roboto",'sans-serif';
+    text-align: center;
+    ;
+    font-family: "Roboto", 'sans-serif';
+    display: inline-block;
+}
+
+nav .gnb>li>a:hover {
+    font-weight: bold;
     transition: 0.5s;
 }
-nav .gnb > li > a:hover{
-    font-weight: bold;
-}
-nav .gnb > li::after {
+
+nav .gnb>li::after {
     content: '';
     display: block;
     position: relative;
@@ -145,7 +153,14 @@ nav .gnb > li::after {
     height: 2px;
     background-color: #FFCE00;
     transition: 0.5s;
+    left: 50%;
+    transform: translateX(-50%);
 }
+
+nav .gnb > li:hover:after {
+    width: 100%;
+}
+
 .Depth2 {
     width: 100%;
     position: absolute;
@@ -153,9 +168,11 @@ nav .gnb > li::after {
     visibility: hidden;
     opacity: 0;
     transition: 0.5s;
-    background-color: #2c2c2c;
+    background-color: rgb(44, 44, 44);
+    box-shadow: 10px -2px 10px 0 rgb(0, 0, 0, 0.2);
 }
-.Depth2.on{
+
+.Depth2.on {
     visibility: visible;
     opacity: 1;
     transition: 0.5s;
@@ -169,7 +186,8 @@ nav .gnb > li::after {
     padding: 50px;
     margin: 0 auto;
 }
-.Depth_inner ul > li {
+
+.Depth_inner ul>li {
     height: 30px;
     line-height: 30px;
     text-align: left;
@@ -193,6 +211,10 @@ nav .gnb > li::after {
 .listbtn {
     padding: 0 10px;
 }
+.listbtn.on {
+    opacity: 0;
+    transition: 0.5s;
+}
 
 .listbtn .line {
     display: block;
@@ -205,66 +227,202 @@ nav .gnb > li::after {
     margin: 3px 0;
 }
 
+.full_meun{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, #2a2a2a, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+    position: fixed;
+    top: 0;
+    visibility: hidden;
+    right:0;
+    transform: translateX(100%);
+    z-index: 10;
+    transition: 0.5s;
+    opacity: 0;
+}
+.full_meun.on{
+    transform: translateX(0);
+    visibility: visible;
+    transition: 0.5s;
+    opacity: 1;
+}
+.full_inner{
+    width: 80%;
+    height: 100%;
+    margin: 0 auto;
+    position: relative;
+}
+.full_list{
+    width: 100%;
+    display: flex;
+    position: absolute;
+    left: 68%;
+    top: 50%;
+    transform: translate(-60%,-50%);
+    
+}
+.list{
+    width: calc(100% / 3);
+}
+.list .list-tit{
+    font-size: 20px;
+    padding: 20px 0;
+    position: relative;
+    display: inline-block;
+    color: #cbcbcb;
+    font-family: none;
+    font-weight: 300;
+}
+.list .list-tit:after{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #FFCE00;
+    position: absolute;
+    bottom: 0;
+}
+.list > ul {
+    margin-top: 10px;
+}
+.list > ul > li{
+    padding: 10px 0;
+    position: relative;
+    font-family: none;
+    letter-spacing: -0.25px;
+}
+.list > ul > li:after{
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0;
+    width: 0%;
+    height: 2px;
+    background-color: #FFCE00;
+    transition: 0.7s ease-in-out;
+}
+.list > ul > li:hover::after{
+    width: 50%;
+    transition: 0.7s ease-in-out;
+}
+.list > ul > li > a{
+    font-size: 16px;
+    color:  #D9D9D9;
+}
+
+.full_inner .top{
+    position: absolute;
+    right: 12%;
+    top: 18%;
+}
+.close{
+    color:#D9D9D9;
+    font-size: 24px;
+}
+
+.copyrigth{
+    display: block;
+    position: absolute;
+    bottom: 14%;
+    left: 50%;
+    transform: translateX(-50%);
+    color:  #D9D9D9;
+    font-weight: 700;
+    font-family: none;
+}
 /* main 시작 */
-.main_video{
+.main_video {
     width: 100%;
     height: 100%;
     max-height: 900px;
     overflow: hidden;
     position: relative;
 }
-.fllter{
+
+.fllter {
     width: 100%;
     height: 100%;
     max-height: 900px;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     background-color: #000;
     opacity: 0.3;
 }
-.text_box{
+
+.text_box {
     width: 100%;
     max-width: 1320px;
     height: 300px;
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     text-align: center;
-    vertical-align:middle
 }
-.text_wrap{
+
+.text_wrap {
     position: relative;
     width: 100%;
     max-width: 1320px;
     height: 300px;
 }
-.text_positon{
+
+.text_positon {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
-.vis_tit{
+
+.vis_tit {
     font-size: 48px;
-    font-family: "Roboto",'sans-serif';
+    font-family: "Roboto", 'sans-serif';
     color: #F0F0F0;
     font-weight: 700;
 }
-.price{
-    font-size: 20px;
+
+.price {
+    font-size: 18px;
     font-family: 'Noto Sans KR', 'sans-serif';
-    color:#959595;
-    font-weight: normal;
+    color: #959595;
+    font-weight: 100;
     letter-spacing: -0.25px;
-    padding: 10px 0;
+    padding: 15px 0;
 }
-.btn ul{
-    display: flex;
+
+.btn ul li {
+    position: relative;
+    display: inline-block;
+    transition: 0.5s;
 }
-.btn ul li a{
+
+.btn ul li::after {
+    width: 0%;
+    height: 2px;
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #FFCE00;
+    transition: 0.5s ease-in;
+}
+
+.btn ul li:hover:after {
+    width: 100%;
+}
+
+.btn ul li a {
     color: #F0F0F0;
+    display: inline-flex;
+    padding: 0 5px;
+}
+
+.btn ul li .arrow {
+    font-size: 18px;
+    line-height: 19px;
 }
 /* footer 시작 */
