--- a/css/font.css
+++ b/css/font.css
@@ -1,2 +1,3 @@
 @import url("http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700");
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@800&display=swap');
