--- a/css/Swiper_custom.css
+++ b/css/Swiper_custom.css
@@ -37,3 +37,36 @@
     opacity: 1;
     transition: 1s;
 }
+
+.Services_slide .swiper-slide:nth-child(1){
+    height: 600px;
+    background: url("../imges/sv_slide.png") center no-repeat;
+    background-size: cover;
+}
+.Services_slide .swiper-slide:nth-child(2){
+    height: 600px;
+    background: url("../imges/sv_slide_92.png") center no-repeat;
+    background-size: cover;
+}
+.Services_slide .swiper-slide{
+    opacity: 0.6;
+}
+.Services_slide .swiper-slide-active{
+    opacity: 1;
+}
+.Services_slide .swiper-slide-active .services_tit{
+    opacity: 1;
+    transform: translateY(0%);
+}
+.swiper-button-next.Services_rigth{
+    right: 200px;
+}
+.swiper-button-prev.Services_left{
+    left: 200px;
+}
+.swiper-button-next.Services_rigth > img{
+    opacity: 1;
+}
+.swiper-button-prev.Services_left > img{
+    opacity: 1;
+}
