--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,9 @@ img {
 body {
     font-family: 'Noto Sans KR', 'sans-serif';
     letter-spacing: -0.25px;
-    height: 10000px;
+}
+section{
+    overflow: hidden;
 }
 
 video {
@@ -486,13 +488,13 @@ nav .gnb>li:hover:after {
 
 /* boxster 시작 */
 .Boxster {
-    padding: 54px 0 0 0;
     overflow: hidden;
     position: relative;
     background: rgb(240, 240, 240);
+    padding-top: 120px;
 }
 
-.swiper-slide {
+.Boxster > .swiper-slide {
     padding-top: 120px;
 }
 
@@ -551,7 +553,7 @@ nav .gnb>li:hover:after {
 
 /* //model 시작 */
 .model_list {
-    padding: 20px;
+    padding: 20px 20px 0 20px;
 }
 
 .item_warppy {
@@ -560,16 +562,23 @@ nav .gnb>li:hover:after {
     grid-template-rows: repeat(2, 50%);
     grid-column-gap: 20px;
 }
-
-.item_warppy>.item {
-    padding-bottom: 20px;
+.item:hover > img{
+    overflow: hidden;
+    transform: scale(1.1);
+    transition: 0.5s;
 }
-
+.item_warppy>.item {
+    margin-bottom: 20px;
+}
 .item {
     position: relative;
     box-sizing: border-box;
+    overflow: hidden;
+    transition: 0.5s;
 }
-
+.item:hover{
+    box-shadow: 2px 2px 15px 1px rgba(0, 0, 0, 0.3);
+}
 .item>.text_positon {
     top: 30%;
     z-index: 1;
@@ -588,6 +597,7 @@ nav .gnb>li:hover:after {
     position: absolute;
     left: 10%;
     top: 15%;
+    z-index: 1;
 }
 
 .list02 .list_postion>.item_tit,
@@ -611,11 +621,149 @@ nav .gnb>li:hover:after {
     opacity: 0.3;
 }
 
-.item>.list01 {
-    background: url(../imges/그룹\ 75.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+.Services{
+    padding: 0 20px 20px 20px;
+}
+.text_wrappy{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: rgba(0, 0, 0, 0.2);
+    position: relative;
+}
+.services_tit{
+    position: absolute;
+    left: 10%;
+    bottom: 10%;
+    transform: translateY(100%);
+    opacity: 0;
+    color: #fff;
+    font-family: 'Noto Sans', sans-serif;
+    transition: 1s;
+}
+.services_tit h2{
+    font-size: 32px;
+    letter-spacing: -0.25px;
+    font-weight: bold;
+}
+.services_tit p {
+    font-size: 18px;
+    margin-top: 10px;
+    line-height: 26px;
 }
 
 /* footer 시작 */
+.Top_footer_wrap{
+    width: 100%;
+    background-color: #353535;
+    
+}
+.info_list{
+    display: flex;
+    justify-content: center;
+    background-color: #353535;
+    padding: 76px 0;
+}
+.info_list ul {
+    width:calc(100%/4);
+}
+.info_list ul .info_tit{
+    font-size: 26px;
+    font-weight: 700;
+    color: #fff;
+    font-family: 'Noto Sans', sans-serif;
+    margin-bottom: 10px;
+    display: block;
+}
+.info_list ul li a{
+    color: #C3C3C3;
+    font-size: 14px;
+    font-family: 'Noto Sans', sans-serif;
+    padding: 5px 0;
+    display: inline-block;
+}
+.info_list ul li a:hover{
+    text-decoration: underline;
+}
+.bot_footer_wrap{
+    background: #2C2C2C;
+    padding-top: 100px;
+    height: 620px;
+}
+.Global{
+    display: flex;
+    padding: 20px 0 35px 0;
+}
+.Global_tit{
+    color: #fff;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 26px;
+}
+form{
+    padding: 0 20px 0 0;
+}
+select{
+    width: 400px;
+    height: 60px;
+    outline: none;
+    background-color: #353535;
+    border: none;
+    color: #fff;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 14px;
+    padding: 0 20px;
+    appearance:none;
+    background-image: url(../imges/drow_arrow.png);
+    background-repeat: no-repeat;
+    background-position: center right 20px;
+    background-size: 14px;
+}
+.add{
+    padding: 50px 0 30px 0;
+    border-top: 1px solid #646464;
+}
+.add > span{
+    font-size: 26px;
+    color: #d9d9d9;
+    font-family: 'Noto Sans', sans-serif;
+    padding-bottom: 30px;
+    display: block;
+    font-weight: 600;
+}
+.pl{
+    padding-left: 16px;
+}
+.caution > p{
+    color: #d9d9d9;
+    font-size: 14px;
+    font-family: 'Noto Sans', sans-serif;
+    line-height: 24px;
+}
+.copy_ligth{
+    display: flex;
+    padding: 20px 0;
+
+}
+.copy{
+    color: #d9d9d9;
+    font-size: 14px;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 700;
+    margin-right: 20px;
+    padding-top: 5px;
+}
+.copy_ligth ul{
+    display: flex;
+    margin-left: 20px;
+}
+.copy_ligth ul li {
+    padding: 0 5px;
+}
+.copy_ligth ul li a{
+    color: #d9d9d9;
+    font-size: 12px;
+    font-family: 'Noto Sans', sans-serif;
+}
+.copy_ligth ul li a:hover{
+    text-decoration: underline;
+}
