--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,8 @@ a:hover {
 img {
     vertical-align: top;
     width: 100%;
+    height:100%;
+    object-fit:cover;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
@@ -564,17 +566,13 @@ nav .gnb>li:hover:after {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 50%);
-    grid-column-gap: 20px;
+    grid-gap: 20px;
 }
 
 .item:hover>img {
     overflow: hidden;
     transform: scale(1.1);
     transition: 0.5s;
-}
-
-.item_warppy>.item {
-    margin-bottom: 20px;
 }
 
 .item {
@@ -633,7 +631,7 @@ nav .gnb>li:hover:after {
 }
 
 .Services {
-    padding: 0 20px 20px 20px;
+    padding: 20px;
 }
 
 .text_wrappy {
@@ -727,9 +725,9 @@ nav .gnb>li:hover:after {
     font-size: 26px;
 }
 
-form {
+/* form {
     padding: 0 20px 0 0;
-}
+} */
 
 /* select{
     width: 100%;
