--- a/css/login.css
+++ b/css/login.css
@@ -25,16 +25,6 @@ textarea:focus:-ms-input-placeholder {
 input[type="checkbox"]{
     margin: 0;
 }
-.pr{
-    position: relative;
-}
-.form-label{
-    position: absolute;
-    left: 3px;
-    bottom: 17px;
-    opacity: 0;
-    visibility: hidden;
-}
 .id {
     margin-top: 0 !important;
 }
@@ -53,10 +43,11 @@ input{
     box-sizing: border-box;
     font-size: 14px;
     letter-spacing: -0.25px;
+}
+.reset > input{
     -webkit-appearance: none;
     -webkit-border-radius: 0;
 }
-
 .login_btn {
     cursor: pointer;
     background: rgba(0, 0, 0, 0.2);
