--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,17 @@ video {
     height: 100%;
     object-fit: cover;
 }
-
+.video_wrap{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+.video_wrap > video{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
 button {
     background: inherit;
     border: none;
@@ -96,7 +106,7 @@ header {
     background-color: #222;
     font-size: 12px;
     position: fixed;
-    z-index: 2;
+    z-index: 3;
 }
 
 .inner {
@@ -377,8 +387,7 @@ nav .gnb>li:hover:after {
 /* main video 시작*/
 .main_video {
     width: 100%;
-    height: 100%;
-    max-height: 800px;
+    height: 100vh;
     overflow: hidden;
     position: relative;
 }
@@ -392,6 +401,7 @@ nav .gnb>li:hover:after {
     transform: translate(-50%, -50%);
     background-color: #000;
     opacity: 0.6;
+    z-index: 1;
 }
 
 .text_box {
@@ -403,6 +413,7 @@ nav .gnb>li:hover:after {
     top: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    z-index: 2;
 }
 
 .text_wrap {
